@@ -16,8 +16,6 @@
     <properties>
         <standalone.conf>../src/test/config/standaloneEap/standalone.xml</standalone.conf>
         <jboss.modules.dir>${basedir}/../../../../..</jboss.modules.dir>
-        <surefire.memory.args>-Xmx512m -XX:MaxPermSize=256m</surefire.memory.args>
-        <surefire.system.args>${surefire.memory.args} -Djboss.dist=${jboss.modules.dir}/eap/build/target/jbossas -DjbossHome=${jboss.modules.dir}/eap/build/target/jbossas</surefire.system.args>
     </properties>
         
     <build>
@@ -41,9 +39,9 @@
                         <configuration>         
                             <!-- Tests to execute. -->
                             <includes>
-                                <include>org/jboss/additional/testsuite/jdkall/web/classloading/war/**/*TestCase.java</include>
-                                <include>org/jboss/additional/testsuite/jdkall/web/servlet/**/*TestCase.java</include>
-                                <include>org/jboss/additional/testsuite/jdkall/web/mtom/**/*TestCase.java</include>
+                                <include>org/jboss/additional/testsuite/jdkall/general/web/classloading/war/**/*TestCase.java</include>
+                                <include>org/jboss/additional/testsuite/jdkall/general/web/servlet/**/*TestCase.java</include>
+                                <include>org/jboss/additional/testsuite/jdkall/general/web/mtom/**/*TestCase.java</include>
                             </includes> 
                         </configuration>
                     </execution>
@@ -52,12 +50,6 @@
                 <configuration>
                     <!-- Prevent test and server output appearing in console. -->
                     <redirectTestOutputToFile>${testLogToFile}</redirectTestOutputToFile>
-
-                    <systemPropertyVariables>
-                        <jboss.options>${surefire.system.args}</jboss.options>
-                        <jboss.home>${jboss.modules.dir}/eap/build/target/jbossas</jboss.home>
-                        <module.path>${jboss.modules.dir}/eap/build/target/jbossas/modules</module.path>
-                    </systemPropertyVariables>
 
                     <!-- Arquillian's config files. -->
                     <additionalClasspathElements combine.children="append">
